2004-04-22  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (mav_parse_offset): Value must be multiple of 4.

2004-04-22  Peter Barada <peter@the-baradas.com>

	* NEWS: Added support for EMAC instructions and MAC/EMAC
	Motorola syntax.
	* config/m68k-parse.h: Add ACC[123], ACCEXT{01,23}, MAC/EMAC
	scale factor tokens, trailing_ampersand to mark mask addressing
	for MAC/EMAC instructions.
	* config/m68k-parse.y: Add options_ampersand clause, '<<',
	'>>'.
	(yylex): Handle '>', '<', and '&' following '+'.
	* config/tc-m68k.c: Set mcfmac/mcfemac on appropriate ColdFire
	architectures in archs[].  
	(m68k-ip): Add '4', 'e', 'g', 'i', cases to handle mask addressing
	for MAC/EMAC instructions, ACC[0123], ACCEXT{01,23}, and '<<'/'>>'
	respectively.
	(m68k_ip): Handle trailing '&' on MAC/EMAC insns.
	(install_operand): Fix 'n' case, Add 'F', 'f', 'G', 'H', 'I', ']'
	cases.
	Add EMAC operands to init_table[].

2004-04-22  Bruno De Bus <bdebus@elis.ugent.be>

	* config/tc-arm.h (enum mstate): Move here, add MAP_UNDEFINED
	state.
	(TC_SEGMENT_INFO_TYPE): Define to enum mstate.
	* config/tc-arm.c (enum mstate): Delete from here.
	(mapping_state): Remove the static mapstate variable and instead
	store the state in the segment.  This allows a per-section mapping
	state.  Handle and ignore MAP_UNDEFINED states.
	(arm_elf_change_section): Get the current mapping state from the
	new section.
	(s_ltorg): Set the mapping state to MAP_DATA.
	(arm_cleanup): Use arm_elf_change_section to get the mapping state
	for each pool as it is emitted.

2004-04-22  Nick Clifton  <nickc@redhat.com>

	* config/tc-arm.h: Formatting tidy ups.

2004-04-20  Chris Demetriou  <cgd@broadcom.com>

	* NEWS: Note that MIPS -membedded-pic option is deprecated.

2004-04-20  DJ Delorie  <dj@redhat.com>

	* config/tc-i386.h [TE_PE] (TC_CONS_FIX_NEW): Define.
	* config/tc-i386.c (md_pseudo_table) [TE_PE]: Add "secrel32".
	[TE_PE] (O_secrel): Define.
	[TE_PE] (x86_pe_cons_fix_new): New.