@@ -1,3 +1,8 @@
+2004-04-22  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>
+
+	* config/tc-mips.c (hilo_interlocks, gpr_interlocks,
+	cop_interlocks): Remove superfluous CPU entries.
+
 2004-04-22  Paul Brook  <paul@codesourcery.com>
 
 	* config/tc-arm.c (mav_parse_offset): Value must be multiple of 4.
